--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      font-size: 1rem;
+      font-size: 1.3rem;
+      font-weight: bold;
       color: #aaa;
     }
     .post-actions {
