--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       text-align: center;
       font-size: 1.3rem;
       font-weight: bold;
-      color: #aaa;
+      color: #eee;
     }
     .post-actions {
       display: flex;
