--- a/search.html
+++ b/search.html
@@ -238,19 +238,18 @@
           renderAccounts();
         }
 
-       const leaderboardUsers = [
-  { name: "doomscroll_god", values: [99999, 99999, 999999, 88888, 77777, 66666, 9999999, 88888, 11111, 69420] },
-  { name: "tapmonster", values: [88888, 77777, 888888, 55555, 44444, 33333, 8000000, 44444, 12345, 42069] },
-  { name: "voidlord", values: [77777, 66666, 777777, 22222, 99999, 11111, 7000000, 33333, 42000, 39000] },
-  { name: "ghostthumb", values: [69696, 123456, 654321, 99999, 54321, 100000, 6666666, 30000, 11111, 1337] },
-  { name: "scrollboi", values: [42042, 55555, 999000, 12121, 21212, 23232, 5555555, 77777, 77777, 2024] },
-  { name: "numbfingerz", values: [50505, 80808, 888888, 66666, 55555, 44444, 4444444, 22222, 88888, 55555] },
-  { name: "eyebleed", values: [34343, 45454, 67676, 12121, 22222, 12345, 3333333, 99999, 55555, 1234] },
-  { name: "flickfiend", values: [101010, 123123, 543210, 8080, 7070, 6060, 2222222, 44444, 55555, 1984] },
-  { name: "ratking", values: [66666, 55555, 44444, 33333, 22222, 11111, 1111111, 12345, 10000, 777] },
-  { name: "swipeghoul", values: [99990, 88880, 77770, 66660, 55550, 44440, 10000000, 43210, 22222, 99999] }
+      const leaderboardUsers = [
+  { name: "doomscroll_god", values: [92456, 78234, 150234, 4622, 3222, 3888, 982345, 6322, 2044, 72000] },
+  { name: "tapmonster", values: [88888, 60123, 132488, 3899, 2900, 3511, 932122, 5744, 1890, 67800] },
+  { name: "voidlord", values: [90111, 65555, 129999, 4221, 3012, 3999, 954001, 6100, 1999, 71000] },
+  { name: "ghostthumb", values: [87432, 62345, 140342, 4455, 2810, 2888, 900443, 5622, 1844, 69321] },
+  { name: "scrollboi", values: [86220, 59123, 135211, 3788, 2633, 2780, 888888, 5400, 1733, 67542] },
+  { name: "numbfingerz", values: [94777, 71234, 145999, 4999, 3200, 3655, 970001, 6890, 2101, 75500] },
+  { name: "eyebleed", values: [89210, 64555, 139222, 4330, 2870, 3122, 916789, 6011, 1955, 70002] },
+  { name: "flickfiend", values: [87500, 60333, 128000, 4100, 2701, 2877, 889999, 5201, 1650, 66001] },
+  { name: "ratking", values: [84444, 56789, 120888, 3890, 2550, 2999, 860000, 5000, 1555, 63000] },
+  { name: "swipeghoul", values: [98001, 73333, 149222, 4720, 3333, 3500, 995321, 6420, 2180, 79000] }
 ];
-
         function renderLeaderboard() {
           const container = document.getElementById("leaderboard");
           container.innerHTML = "";
@@ -266,13 +265,6 @@
                 window.location.href = `user.html?user=${user.name}`;
               }
             };
-            const bottomNote = document.createElement("p");
-bottomNote.style.textAlign = "center";
-bottomNote.style.fontSize = "0.85rem";
-bottomNote.style.color = "#777";
-bottomNote.style.marginTop = "1rem";
-bottomNote.textContent = "You're not even on the board. Try harder or don't.";
-container.appendChild(bottomNote);
 
             const medal = i === 0 ? "🥇" : i === 1 ? "🥈" : i === 2 ? "🥉" : `${i + 1}.`;
             div.innerHTML = `
