--- a/publish.html
+++ b/publish.html
@@ -132,9 +132,10 @@
     .achievement-tile:hover {
       border-color: #666;
     }
-    .achievement-tile.selected {
-      border-color: #00bfff;
-      box-shadow: 0 0 8px #00bfff55;
+  .achievement-tile.selected {
+  border-color: #f44;
+  box-shadow: 0 0 12px #f44;
+}
     }
     button {
       margin-top: 1.5rem;
