--- a/publish.html
+++ b/publish.html
@@ -137,15 +137,28 @@
   box-shadow: 0 0 12px #f44;
 }
     }
-    button {
-      margin-top: 1.5rem;
-      padding: 0.7rem 1.2rem;
-      background-color: #1a1a1a;
-      color: #fff;
-      border: 1px solid #444;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+button {
+  margin-top: 1.5rem;
+  padding: 0.9rem 1.5rem;
+  background-color: #1a1a1a;
+  color: #fff;
+  font-size: 1.05rem;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  border: 2px solid #f44;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 0 12px rgba(255, 68, 68, 0.3);
+  transition: all 0.25s ease;
+}
+
+button:hover {
+  background-color: #f44;
+  color: #fff;
+  box-shadow: 0 0 16px rgba(255, 68, 68, 0.5);
+  transform: scale(1.03);
+}
+
     .preview {
       margin-top: 2rem;
       background-color: #1c1c1c;
