--- a/publish.html
+++ b/publish.html
@@ -138,25 +138,27 @@
 }
     }
 button {
-  margin-top: 1.5rem;
-  padding: 0.9rem 1.5rem;
+  margin-top: 2rem;
+  padding: 1.2rem 2rem;
   background-color: #1a1a1a;
   color: #fff;
-  font-size: 1.05rem;
+  font-size: 1.25rem;
   font-weight: bold;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.7px;
   border: 2px solid #f44;
-  border-radius: 10px;
+  border-radius: 12px;
   cursor: pointer;
-  box-shadow: 0 0 12px rgba(255, 68, 68, 0.3);
+  box-shadow: 0 0 16px rgba(255, 68, 68, 0.3);
   transition: all 0.25s ease;
+  width: 100%;
+  max-width: 400px;
 }
 
 button:hover {
   background-color: #f44;
   color: #fff;
-  box-shadow: 0 0 16px rgba(255, 68, 68, 0.5);
-  transform: scale(1.03);
+  box-shadow: 0 0 20px rgba(255, 68, 68, 0.6);
+  transform: scale(1.04);
 }
 
     .preview {
