--- a/publish.html
+++ b/publish.html
@@ -138,27 +138,28 @@
 }
     }
 button {
-  margin-top: 2rem;
+  display: block;
+  margin: 2rem auto 0 auto;
   padding: 1.2rem 2rem;
   background-color: #1a1a1a;
   color: #fff;
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   font-weight: bold;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.6px;
   border: 2px solid #f44;
   border-radius: 12px;
   cursor: pointer;
-  box-shadow: 0 0 16px rgba(255, 68, 68, 0.3);
+  box-shadow: 0 0 12px rgba(255, 68, 68, 0.2);
   transition: all 0.25s ease;
+  max-width: 100%;
   width: 100%;
-  max-width: 400px;
 }
 
-button:hover {
-  background-color: #f44;
+    button:hover {
+  background-color: #1a1a1a;
   color: #fff;
-  box-shadow: 0 0 20px rgba(255, 68, 68, 0.6);
-  transform: scale(1.04);
+  box-shadow: 0 0 22px rgba(255, 68, 68, 0.6);
+  transform: scale(1.03);
 }
 
     .preview {
