--- a/publish.html
+++ b/publish.html
@@ -140,26 +140,27 @@
 button {
   display: block;
   margin: 2rem auto 0 auto;
-  padding: 1.2rem 2rem;
+  padding: 1.6rem 3rem; /* ✨ way more padding = bigger button */
   background-color: #1a1a1a;
   color: #fff;
-  font-size: 1.35rem;
+  font-size: 1.6rem; /* 👈 BIGGER text */
   font-weight: bold;
-  letter-spacing: 0.6px;
-  border: 2px solid #f44;
-  border-radius: 12px;
+  letter-spacing: 0.7px;
+  border: 3px solid #f44;
+  border-radius: 16px;
   cursor: pointer;
-  box-shadow: 0 0 12px rgba(255, 68, 68, 0.2);
-  transition: all 0.25s ease;
-  max-width: 100%;
+  box-shadow: 0 0 16px rgba(255, 68, 68, 0.2);
+  transition: box-shadow 0.25s ease, transform 0.25s ease;
   width: 100%;
+  max-width: 500px; /* ⬅️ feels like a “primary” button */
 }
 
-    button:hover {
-  background-color: #1a1a1a;
-  color: #fff;
-  box-shadow: 0 0 22px rgba(255, 68, 68, 0.6);
+
+   button:hover {
+  box-shadow: 0 0 28px rgba(255, 68, 68, 0.5);
   transform: scale(1.03);
+}
+
 }
 
     .preview {
