--- a/publish.html
+++ b/publish.html
@@ -139,28 +139,26 @@
     }
 button {
   display: block;
-  margin: 2rem auto 0 auto;
-  padding: 1.6rem 3rem; /* ✨ way more padding = bigger button */
+  margin: 3rem auto 0 auto;
+  padding: 2rem 4rem;
   background-color: #1a1a1a;
   color: #fff;
-  font-size: 1.6rem; /* 👈 BIGGER text */
-  font-weight: bold;
-  letter-spacing: 0.7px;
-  border: 3px solid #f44;
-  border-radius: 16px;
+  font-size: 2rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+  border: 4px solid #f44;
+  border-radius: 18px;
   cursor: pointer;
-  box-shadow: 0 0 16px rgba(255, 68, 68, 0.2);
+  box-shadow: 0 0 25px rgba(255, 68, 68, 0.2);
   transition: box-shadow 0.25s ease, transform 0.25s ease;
   width: 100%;
-  max-width: 500px; /* ⬅️ feels like a “primary” button */
+  max-width: 600px;
+  text-align: center;
 }
 
-
-   button:hover {
-  box-shadow: 0 0 28px rgba(255, 68, 68, 0.5);
-  transform: scale(1.03);
-}
-
+    button:hover {
+  box-shadow: 0 0 40px rgba(255, 68, 68, 0.5);
+  transform: scale(1.04);
 }
 
     .preview {
