--- a/publish.html
+++ b/publish.html
@@ -140,10 +140,10 @@
 button {
   display: block;
   margin: 3rem auto 0 auto;
-  padding: 50rem 100rem;
+  padding: 50rem;
   background-color: #1a1a1a;
   color: #fff;
-  font-size: 2rem;
+  font-size: 10rem;
   font-weight: 900;
   letter-spacing: 1px;
   border: 4px solid #f44;
