--- a/publish.html
+++ b/publish.html
@@ -140,25 +140,24 @@
 button {
   display: block;
   margin: 3rem auto 0 auto;
-  padding: 50rem;
-  background-color: #1a1a1a;
+  padding: 2.5rem 5rem;
+  background-color: #0f0f0f;
   color: #fff;
-  font-size: 10rem;
+  font-size: 2.2rem;
   font-weight: 900;
   letter-spacing: 1px;
   border: 4px solid #f44;
-  border-radius: 18px;
+  border-radius: 20px;
   cursor: pointer;
-  box-shadow: 0 0 25px rgba(255, 68, 68, 0.2);
+  box-shadow: 0 0 30px rgba(255, 68, 68, 0.25);
   transition: box-shadow 0.25s ease, transform 0.25s ease;
   width: 100%;
-  max-width: 600px;
+  max-width: 700px;
   text-align: center;
 }
-
-    button:hover {
-  box-shadow: 0 0 40px rgba(255, 68, 68, 0.5);
-  transform: scale(1.04);
+button:hover {
+  box-shadow: 0 0 50px rgba(255, 68, 68, 0.6);
+  transform: scale(1.03);
 }
 
     .preview {
