--- a/publish.html
+++ b/publish.html
@@ -139,25 +139,25 @@
     
 button {
   display: block;
-  margin: 3rem auto 0 auto;
-  padding: 2.5rem 5rem;
+  margin: 2.5rem auto 0 auto;
+  padding: 1.4rem 3rem;
   background-color: #0f0f0f;
   color: #fff;
-  font-size: 2.2rem;
-  font-weight: 900;
-  letter-spacing: 1px;
-  border: 4px solid #f44;
-  border-radius: 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.8px;
+  border: 3px solid #f44;
+  border-radius: 14px;
   cursor: pointer;
-  box-shadow: 0 0 30px rgba(255, 68, 68, 0.25);
+  box-shadow: 0 0 18px rgba(255, 68, 68, 0.25);
   transition: box-shadow 0.25s ease, transform 0.25s ease;
   width: 100%;
-  max-width: 700px;
+  max-width: 500px;
   text-align: center;
 }
 button:hover {
-  box-shadow: 0 0 50px rgba(255, 68, 68, 0.6);
-  transform: scale(1.03);
+  box-shadow: 0 0 28px rgba(255, 68, 68, 0.5);
+  transform: scale(1.02);
 }
 
     .preview {
