--- a/publish.html
+++ b/publish.html
@@ -104,31 +104,34 @@
       font-size: 1.2rem;
     }
     .container {
-      max-width: 600px;
-      margin: auto;
-      text-align: center;
-    }
+  max-width: 600px;
+  margin: auto;
+  text-align: center;
+  padding: 1rem 1rem 0;
+}
+
     .achievements-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 8px;
-      margin-top: 1rem;
-    }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  margin-top: 1.2rem;
+}
     .achievement-tile {
-      background-color: #1c1c1c;
-      border: 2px solid #333;
-      padding: 0.8rem;
-      aspect-ratio: 1/1;
-      font-size: 0.75rem;
-      color: #ccc;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      transition: 0.2s;
-      transition: box-shadow 0.3s, border-color 0.3s;
-    }
+  background-color: #1c1c1c;
+  border: 2px solid #333;
+  padding: 0.5rem 1rem;
+  height: 70px;
+  font-size: 0.8rem;
+  color: #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: box-shadow 0.3s, border-color 0.3s;
+}
+
     .achievement-tile:hover {
       border-color: #666;
     }
