--- a/publish.html
+++ b/publish.html
@@ -59,11 +59,12 @@
       position: relative;
     }
     .content-wrapper {
-      flex: 1;
-      overflow-y: auto;
-      padding: 1rem;
-      padding-bottom: 80px;
-    }
+  flex: 1;
+  overflow-y: auto;
+  padding: 1rem;
+  padding-bottom: 40px;
+}
+
     .content-wrapper::-webkit-scrollbar {
       width: 8px;
     }
@@ -142,20 +143,20 @@
     
 button {
   display: block;
-  margin: 2rem auto 0 auto;
-  padding: 1rem 2rem;
+  margin: 1.5rem auto 0 auto;
+  padding: 0.9rem 1.8rem;
   background-color: #0f0f0f;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.6px;
   border: 2px solid #f44;
-  border-radius: 12px;
+  border-radius: 10px;
   cursor: pointer;
-  box-shadow: 0 0 14px rgba(255, 68, 68, 0.2);
+  box-shadow: 0 0 12px rgba(255, 68, 68, 0.2);
   transition: box-shadow 0.25s ease, transform 0.25s ease;
   width: 100%;
-  max-width: 420px;
+  max-width: 400px;
   text-align: center;
 }
 
@@ -164,14 +165,20 @@ button:hover {
   transform: scale(1.02);
 }
 
-    .preview {
-      margin-top: 2rem;
-      background-color: #1c1c1c;
-      border: 1px solid #333;
-      padding: 1rem;
-      border-radius: 6px;
-      color: #aaa;
-    }
+   .preview {
+  margin-top: 1.2rem;
+  background-color: #1c1c1c;
+  border: 1px solid #333;
+  padding: 0.75rem 1rem;
+  border-radius: 6px;
+  font-size: 0.9rem;
+  line-height: 1.4;
+  color: #aaa;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
   </style>
 </head>
 <body>
