--- a/index.html
+++ b/index.html
@@ -512,12 +512,22 @@ for (let i = 0; i < 10; i++) {
   createPost(msg);
 }
 
-document.querySelector(".content-wrapper").addEventListener("scroll", () => {
-  const wrapper = document.querySelector(".content-wrapper");
-  scrollCount++;
-  localStorage.setItem("scrollCount", scrollCount);
-  updateStats();
+const wrapper = document.querySelector(".content-wrapper");
+let scrollCooldown = false;
 
+wrapper.addEventListener("scroll", () => {
+  if (!scrollCooldown) {
+    scrollCount++;
+    localStorage.setItem("scrollCount", scrollCount);
+    updateStats();
+
+    scrollCooldown = true;
+    setTimeout(() => {
+      scrollCooldown = false;
+    }, 500); // 0.5 seconds cooldown
+  }
+
+  // Infinite scroll behavior
   if (wrapper.scrollTop + wrapper.clientHeight >= wrapper.scrollHeight - 10) {
     for (let i = 0; i < 5; i++) {
       const msg = fakeMessages[Math.floor(Math.random() * fakeMessages.length)];
