--- a/reels.html
+++ b/reels.html
@@ -364,19 +364,32 @@
           }
         }
 
-        function trackVisibleReels() {
-          const allReels = document.querySelectorAll(".reel");
-          allReels.forEach((reel) => {
-            const rect = reel.getBoundingClientRect();
-            const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
-            if (isInView && !viewedReels.has(reel)) {
-              viewedReels.add(reel);
-              reelCount++;
-              localStorage.setItem("reelsViewed", reelCount);
-              updateStats();
-            }
-          });
-        }
+        const viewedReels = new Set();
+let lastReelIndex = -1;
+
+function trackVisibleReels() {
+  const allReels = document.querySelectorAll(".reel");
+
+  allReels.forEach((reel, index) => {
+    const rect = reel.getBoundingClientRect();
+    const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
+
+    if (isInView && !viewedReels.has(reel)) {
+      viewedReels.add(reel);
+      reelCount++;
+      localStorage.setItem("reelsViewed", reelCount);
+
+      if (index !== lastReelIndex) {
+        scrollCount++;
+        localStorage.setItem("scrollCount", scrollCount);
+        lastReelIndex = index;
+      }
+
+      updateCounters();
+    }
+  });
+}
+
 
 const reelWrapper = document.getElementById("reelWrapper");
 let scrollCooldown = false;
