--- a/reels.html
+++ b/reels.html
@@ -234,12 +234,12 @@ z-index: 2;
 <script>
 const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
 const captions = [
-"You're watching nothing.",
-"Keep staring... it's not real.",
-"Every frame is the same.",
-"This video changed nothing.",
-"Still scrolling?",
-"Now in 4K: pure void."
+  "You're watching nothing.",
+  "Keep staring... it's not real.",
+  "Every frame is the same.",
+  "This video changed nothing.",
+  "Still scrolling?",
+  "Now in 4K: pure void."
 ];
 
 let reelCount = parseInt(localStorage.getItem("reelsViewed")) || 0;
@@ -256,133 +256,128 @@ let time = parseInt(localStorage.getItem("secondsWasted")) || 0;
 const viewedReels = new Set();
 
 function updateStats() {
-document.getElementById("stat-reels").textContent = reelCount;
-document.getElementById("stat-scrolls").textContent = scrollCount;
-document.getElementById("stat-likes").textContent = likes;
-document.getElementById("stat-comments").textContent = comments;
-document.getElementById("stat-reposts").textContent = reposts;
-document.getElementById("stat-bookmarks").textContent = bookmarks;
-document.getElementById("stat-profiles").textContent = profiles;
-document.getElementById("stat-posts").textContent = posts;
-document.getElementById("stat-stories").textContent = stories;
-document.getElementById("stat-minutes").textContent = Math.floor(time / 60);
+  document.getElementById("stat-reels").textContent = reelCount;
+  document.getElementById("stat-scrolls").textContent = scrollCount;
+  document.getElementById("stat-likes").textContent = likes;
+  document.getElementById("stat-comments").textContent = comments;
+  document.getElementById("stat-reposts").textContent = reposts;
+  document.getElementById("stat-bookmarks").textContent = bookmarks;
+  document.getElementById("stat-profiles").textContent = profiles;
+  document.getElementById("stat-posts").textContent = posts;
+  document.getElementById("stat-stories").textContent = stories;
+  document.getElementById("stat-minutes").textContent = Math.floor(time / 60);
 }
 
 setInterval(() => {
-time++;
-localStorage.setItem("secondsWasted", time);
-updateStats();
+  time++;
+  localStorage.setItem("secondsWasted", time);
+  updateStats();
 }, 1000);
 
 function createReel(username, caption) {
-const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
-const reel = document.createElement("div");
-reel.className = "reel";
-const inner = document.createElement("div");
-inner.className = "reel-inner";
-inner.innerHTML = `
-           <div class="caption-center">${caption}</div>
-           <div class="user-info">
-             <img src="${avatar}" alt="avatar">
-             <div class="username">@${username}</div>
-           </div>
-           <div class="actions">
-             <button onclick="handleLike(this)">❤️</button>
-             <button onclick="toggleCommentBox(this)">💬</button>
-             <button onclick="handleRepost(this)">🔁</button>
-             <button onclick="handleBookmark(this)">📌</button>
-           </div>
-           <div class="comment-box">
-             <input type="text" placeholder="Say something...">
-             <button onclick="submitFakeComment(this)">➤</button>
-           </div>`;
-reel.appendChild(inner);
-document.getElementById("reelWrapper").appendChild(reel);
+  const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+  const reel = document.createElement("div");
+  reel.className = "reel";
+  const inner = document.createElement("div");
+  inner.className = "reel-inner";
+  inner.innerHTML = `
+    <div class="caption-center">${caption}</div>
+    <div class="user-info">
+      <img src="${avatar}" alt="avatar">
+      <div class="username">@${username}</div>
+    </div>
+    <div class="actions">
+      <button onclick="handleLike(this)">❤️</button>
+      <button onclick="toggleCommentBox(this)">💬</button>
+      <button onclick="handleRepost(this)">🔁</button>
+      <button onclick="handleBookmark(this)">📌</button>
+    </div>
+    <div class="comment-box">
+      <input type="text" placeholder="Say something...">
+      <button onclick="submitFakeComment(this)">➤</button>
+    </div>`;
+  reel.appendChild(inner);
+  document.getElementById("reelWrapper").appendChild(reel);
 }
 
 function handleLike(btn) {
-likes++;
-localStorage.setItem("likesGiven", likes);
-updateStats();
-showPopup(btn, "This like did nothing.");
+  likes++;
+  localStorage.setItem("likesGiven", likes);
+  updateStats();
+  showPopup(btn, "This like did nothing.");
 }
 
 function handleRepost(btn) {
-reposts++;
-localStorage.setItem("repostsDone", reposts);
-updateStats();
-showPopup(btn, "Echoed into the abyss.");
+  reposts++;
+  localStorage.setItem("repostsDone", reposts);
+  updateStats();
+  showPopup(btn, "Echoed into the abyss.");
 }
 
 function handleBookmark(btn) {
-bookmarks++;
-localStorage.setItem("postsBookmarked", bookmarks);
-updateStats();
-showPopup(btn, "📌 Marked meaningless.");
+  bookmarks++;
+  localStorage.setItem("postsBookmarked", bookmarks);
+  updateStats();
+  showPopup(btn, "📌 Marked meaningless.");
 }
 
 function showPopup(btn, message) {
-const popup = document.createElement("div");
-popup.className = "popup";
-popup.textContent = message;
-btn.closest(".reel-inner").appendChild(popup);
-setTimeout(() => popup.remove(), 2500);
+  const popup = document.createElement("div");
+  popup.className = "popup";
+  popup.textContent = message;
+  btn.closest(".reel-inner").appendChild(popup);
+  setTimeout(() => popup.remove(), 2500);
 }
 
 function toggleCommentBox(btn) {
-const inner = btn.closest(".reel-inner");
-const box = inner.querySelector(".comment-box");
-const userInfo = inner.querySelector(".user-info");
-const actions = inner.querySelector(".actions");
-const isOpen = box.style.display === "flex";
-box.style.display = isOpen ? "none" : "flex";
-userInfo.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
-actions.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
+  const inner = btn.closest(".reel-inner");
+  const box = inner.querySelector(".comment-box");
+  const userInfo = inner.querySelector(".user-info");
+  const actions = inner.querySelector(".actions");
+  const isOpen = box.style.display === "flex";
+  box.style.display = isOpen ? "none" : "flex";
+  userInfo.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
+  actions.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
 }
 
 function submitFakeComment(button) {
-const input = button.previousElementSibling;
-if (input.value.trim() !== "") {
-comments++;
-localStorage.setItem("commentsGiven", comments);
-updateStats();
-input.style.transition = "opacity 0.5s ease";
-input.style.opacity = 0;
-setTimeout(() => {
-input.value = "";
-input.style.opacity = 1;
-input.closest(".comment-box").style.display = "none";
-}, 600);
-}
+  const input = button.previousElementSibling;
+  if (input.value.trim() !== "") {
+    comments++;
+    localStorage.setItem("commentsGiven", comments);
+    updateStats();
+    input.style.transition = "opacity 0.5s ease";
+    input.style.opacity = 0;
+    setTimeout(() => {
+      input.value = "";
+      input.style.opacity = 1;
+      input.closest(".comment-box").style.display = "none";
+    }, 600);
+  }
 }
 
 function loadInitialReels(count = 10) {
-for (let i = 0; i < count; i++) {
-const user = usernames[Math.floor(Math.random() * usernames.length)];
-const cap = captions[Math.floor(Math.random() * captions.length)];
-createReel(user, cap);
-}
+  for (let i = 0; i < count; i++) {
+    const user = usernames[Math.floor(Math.random() * usernames.length)];
+    const cap = captions[Math.floor(Math.random() * captions.length)];
+    createReel(user, cap);
+  }
 }
 
 function trackVisibleReels() {
-const allReels = document.querySelectorAll(".reel");
-allReels.forEach((reel) => {
-const rect = reel.getBoundingClientRect();
-const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
-if (isInView && !viewedReels.has(reel)) {
-viewedReels.add(reel);
-reelCount++;
-localStorage.setItem("reelsViewed", reelCount);
-updateStats();
-}
-});
+  const allReels = document.querySelectorAll(".reel");
+  allReels.forEach((reel) => {
+    const rect = reel.getBoundingClientRect();
+    const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
+    if (isInView && !viewedReels.has(reel)) {
+      viewedReels.add(reel);
+      reelCount++;
+      localStorage.setItem("reelsViewed", reelCount);
+      updateStats();
+    }
+  });
 }
 
-        document.getElementById("reelWrapper").addEventListener("scroll", () => {
-          scrollCount++;
-          localStorage.setItem("scrollCount", scrollCount);
-          updateStats();
-          trackVisibleReels();
 const reelWrapper = document.getElementById("reelWrapper");
 let scrollCooldown = false;
 
@@ -390,12 +385,12 @@ reelWrapper.addEventListener("scroll", () => {
   if (!scrollCooldown) {
     scrollCount++;
     localStorage.setItem("scrollCount", scrollCount);
-    updateCounters();
+    updateStats();
 
     scrollCooldown = true;
     setTimeout(() => {
       scrollCooldown = false;
-    }, 500); // 0.5s delay between scrolls
+    }, 500); // Cooldown between scroll counts
   }
 
   trackVisibleReels();
@@ -405,16 +400,11 @@ reelWrapper.addEventListener("scroll", () => {
   }
 });
 
-          const wrapper = document.getElementById("reelWrapper");
-          if (wrapper.scrollTop + wrapper.clientHeight >= wrapper.scrollHeight - 10) {
-            loadInitialReels(5);
-          }
-        });
-
 updateStats();
 loadInitialReels();
 trackVisibleReels();
 </script>
+
 </div> <!-- closes #app-frame -->
 </div> <!-- closes .layout-wrapper -->
 </body>
