--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
+      background-color: #e5e5e5;
       color: #fff;
       display: flex;
       justify-content: center;
