--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
+      background-color: #eeeeee;
       color: #fff;
       display: flex;
       justify-content: center;
