--- a/publish.html
+++ b/publish.html
@@ -16,7 +16,7 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
+      background-color: #eeeeee;
       color: #fff;
       display: flex;
       justify-content: center;
