--- a/reels.html
+++ b/reels.html
@@ -9,7 +9,7 @@
 html, body {
 height: 100%;
 overflow: hidden;
-background-color: #0f0f0f;
+background-color: #eeeeee;
 color: #fff;
 font-family: Arial, sans-serif;
 display: flex;
