--- a/story.html
+++ b/story.html
@@ -13,7 +13,7 @@
     html, body {
       height: 100%;
       overflow: hidden;
-      background-color: #0f0f0f;
+      background-color: #eeeeee;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
