--- a/user.html
+++ b/user.html
@@ -152,16 +152,16 @@
 
         const statGrid = document.getElementById("statGrid");
         const stats = [
-          { label: "Minutes Wasted", max: 80000 },
-          { label: "Likes Given", max: 150000 },
-          { label: "Scrolls Done", max: 1000000 },
-          { label: "Reels Viewed", max: 90000 },
-          { label: "Stories Viewed", max: 70000 },
-          { label: "Comments Given", max: 25000 },
-          { label: "Reposts Done", max: 15000 },
-          { label: "Bookmarks", max: 10000 },
-          { label: "Profiles Visited", max: 7000 },
-          { label: "Posts Posted", max: 3000 }
+          { label: "Minutes Wasted", max: 1200 },
+          { label: "Likes Given", max: 2000 },
+          { label: "Scrolls Done", max: 4000 },
+          { label: "Reels Viewed", max: 3000 },
+          { label: "Stories Viewed", max: 2500 },
+          { label: "Comments Given", max: 1200 },
+          { label: "Reposts Done", max: 1000 },
+          { label: "Bookmarks", max: 800 },
+          { label: "Profiles Visited", max: 700 },
+          { label: "Posts Posted", max: 300 }
         ];
 
         stats.forEach(stat => {
