--- a/user.html
+++ b/user.html
@@ -25,6 +25,23 @@
       max-width: 1600px;
       height: 100vh;
     }
+    #live-stats {
+      flex-shrink: 0;
+      width: 180px;
+      margin-right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 10px;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      font-size: 0.85rem;
+      line-height: 1.6;
+      position: sticky;
+      top: 20px;
+      height: fit-content;
+    }
     #app-frame {
       width: min(645px, 95vw);
       height: 100vh;
@@ -118,6 +135,18 @@
 </head>
 <body>
   <div class="layout-wrapper">
+    <div id="live-stats">
+      <div>Reels Viewed: <span id="stat-reels">0</span></div>
+      <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+      <div>Likes Given: <span id="stat-likes">0</span></div>
+      <div>Comments Given: <span id="stat-comments">0</span></div>
+      <div>Reposts Done: <span id="stat-reposts">0</span></div>
+      <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+      <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+      <div>Posts Posted: <span id="stat-posts">0</span></div>
+      <div>Stories Viewed: <span id="stat-stories">0</span></div>
+      <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+    </div>
     <div id="app-frame">
       <div class="content-wrapper">
         <header id="username">@username</header>
@@ -199,6 +228,23 @@
         } else {
           document.getElementById("postCount").textContent = Math.floor(Math.random() * 30) + 1;
         }
+
+        // Populate live-stats sidebar with real user data
+        function updateLiveStats() {
+          const get = key => parseInt(localStorage.getItem(key)) || 0;
+          document.getElementById("stat-reels").textContent = get("reelsViewed");
+          document.getElementById("stat-scrolls").textContent = get("scrollCount");
+          document.getElementById("stat-likes").textContent = get("likesGiven");
+          document.getElementById("stat-comments").textContent = get("commentsGiven");
+          document.getElementById("stat-reposts").textContent = get("repostsDone");
+          document.getElementById("stat-bookmarks").textContent = get("postsBookmarked");
+          document.getElementById("stat-profiles").textContent = get("profilesVisited");
+          document.getElementById("stat-posts").textContent = get("postsPosted");
+          document.getElementById("stat-stories").textContent = get("storiesViewed");
+          document.getElementById("stat-minutes").textContent = Math.floor(get("secondsWasted") / 60);
+        }
+
+        updateLiveStats();
       </script>
     </div>
   </div>
